--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+openivi-bootstrap (0.3) stable; urgency=medium
+
+  * Remove default www page
+
+ -- Phil Wise <phil@advancedtelematic.com>  Tue, 13 Oct 2015 10:45:58 +0200
+
 openivi-bootstrap (0.2.3) stable; urgency=medium
 
   * Fix extension loading
